W2.Parser/alt/test/invalid/invalid1.c
//NOT ERROR FREE - This test case includes an error in the header file statement
#include stdio.h>

int main()
{
	printf("Hello");
	return 0;
}
	